--- a/package.json
+++ b/package.json
@@ -12,7 +12,17 @@
     "@astrojs/mdx": "^4.3.5",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.5.1",
+    "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.7",
-    "sharp": "^0.34.3"
+    "astro-icon": "^1.1.5",
+    "feather-icons": "^4.29.2",
+    "sharp": "^0.34.3",
+    "tailwindcss": "^4.1.13"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.2.4",
+    "@iconify-json/fa": "^1.2.2",
+    "@iconify-json/fa6-brands": "^1.2.6",
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
