--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@astrojs/cloudflare": "^12.6.8",
+		"@astrojs/compiler": "^2.13.0",
 		"@astrojs/mdx": "^4.3.5",
 		"@astrojs/react": "^4.3.1",
 		"@astrojs/rss": "^4.0.12",
@@ -35,6 +36,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.4",
+		"@iconify-json/clarity": "^1.2.4",
 		"@iconify-json/devicon": "^1.2.45",
 		"@iconify-json/devicon-plain": "^1.2.41",
 		"@iconify-json/fa": "^1.2.2",
@@ -46,7 +48,7 @@
 		"@iconify-json/simple-icons": "^1.2.54",
 		"@iconify-json/stash": "^1.2.4",
 		"@iconify/icons-simple-line-icons": "^1.2.3",
-		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/typography": "^0.5.19",
 		"wrangler": "^4.37.1"
 	}
 }
