--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"react-dom": "^19.1.1",
 		"resend": "^6.1.0",
 		"sharp": "^0.34.3",
-		"tailwindcss": "^4.1.13"
+		"tailwindcss": "^4.1.13",
+		"tippy": "^0.0.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.4",
