--- a/package.json
+++ b/package.json
@@ -16,20 +16,12 @@
 		"@astrojs/react": "^4.3.1",
 		"@astrojs/rss": "^4.0.12",
 		"@astrojs/sitemap": "^3.5.1",
-		"@iconify-icons/simple-line-icons": "^1.2.3",
-		"@iconify-json/ix": "^1.2.10",
-		"@iconify-json/logos": "^1.2.10",
-		"@iconify-json/material-symbols": "^1.2.44",
-		"@iconify-json/mdi": "^1.2.3",
-		"@iconify-json/system-uicons": "^1.2.4",
 		"@react-email/components": "^0.5.3",
 		"@react-email/render": "1.2.3",
 		"@tailwindcss/vite": "^4.1.13",
 		"@types/react": "^19.1.13",
 		"@types/react-dom": "^19.1.9",
 		"astro": "^5.13.7",
-		"astro-icon": "^1.1.5",
-		"feather-icons": "^4.29.2",
 		"gsap": "^3.13.0",
 		"pg": "^8.16.3",
 		"react": "^19.1.1",
@@ -41,20 +33,21 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.4",
-		"@iconify-json/clarity": "^1.2.4",
-		"@iconify-json/devicon": "^1.2.45",
-		"@iconify-json/devicon-plain": "^1.2.41",
-		"@iconify-json/fa": "^1.2.2",
 		"@iconify-json/fa6-brands": "^1.2.6",
-		"@iconify-json/fa6-solid": "^1.2.4",
-		"@iconify-json/file-icons": "^1.2.2",
-		"@iconify-json/fluent-mdl2": "^1.2.1",
+		"@iconify-json/feather": "^1.2.1",
+		"@iconify-json/fluent": "^1.2.35",
+		"@iconify-json/ix": "^1.2.10",
 		"@iconify-json/lineicons": "^1.2.6",
-		"@iconify-json/simple-icons": "^1.2.54",
+		"@iconify-json/logos": "^1.2.10",
+		"@iconify-json/material-symbols": "^1.2.44",
+		"@iconify-json/mdi": "^1.2.3",
 		"@iconify-json/stash": "^1.2.4",
+		"@iconify-json/system-uicons": "^1.2.4",
 		"@iconify/icons-simple-line-icons": "^1.2.3",
 		"@tailwindcss/typography": "^0.5.19",
 		"@types/pg": "^8.15.6",
+		"rollup-plugin-visualizer": "^6.0.5",
+		"unplugin-icons": "^22.5.0",
 		"wrangler": "^4.37.1"
 	}
 }
